--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-17  Wang Jian  <lark@linux.net.cn>
+
+	* zh_CN.po: Converted to UTF-8.
+
 2002-03-17  Szabolcs Ban <shooby@gnome.hu>
 
 	* hu.po: Updated Hungarian translation
