--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-19  Mikael Hallendal  <micke@codefactory.se>
+
+	* configure.in: updated to 0.4
+
 2002-03-19  Sandeep V Honde  <sandeep.honde@wipro.com>
 
 	* src/yelp-main.c:
