--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-03-19  Mikael Hallendal  <micke@codefactory.se>
 
+	* Release 0.4
+	
 	* configure.in: updated to 0.4
 
 2002-03-19  Sandeep V Honde  <sandeep.honde@wipro.com>
