--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-03-19  Mikael Hallendal  <micke@codefactory.se>
 
+	* configure.in: bumped version to 0.4.99
+
 	* Release 0.4
 	
 	* configure.in: updated to 0.4
