--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-20  Christophe Merlet  <redfox@eikonex.org>
+
+	* configure.in: Added fr to $ALL_LINGUAS.
+
 2002-03-19  Mikael Hallendal  <micke@codefactory.se>
 
 	* configure.in: bumped version to 0.4.99
