--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-20  Christophe Merlet  <redfox@eikonex.org>
+
+	* fr.po: Added French translation from
+	Jean-Michel Ardantz <jmardantz@ifrance.com> .
+
 2002-03-17  Roy-Magne Mo  <rmo@sunnmore.net>
 
 	* nn.po: Updated Norwegian nynorsk.
