--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-20  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-view-index.c (set_relation): style-fixes.
+
 2002-03-20  Jagadeesh B. G  <jagadeesh.bana@wipro.com>
 
 	* src/yelp-view-index.c: Set atk relation for search entry and
