--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-03-23  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-view-toc.c (yelp_view_toc_open_url): scroll to the
+	  beginning of the document after reading it. Fixes #72965
+
 	* src/yelp-util.c:
 	(yelp_util_extract_docpath_from_uri): added an argument if we want
 	  the return docpath to be prepended with "ghelp:" or not.
