--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-25  Mikael Hallendal  <micke@codefactory.se>
+
+	* configure.in: bumped version to 0.5
+
 2002-03-24  Zbigniew Chyla  <cyba@gnome.pl>
 
 	Fixes #72583
