updated (oops, missed 0.5 release).
2002-03-25  Mikael Hallendal  <micke@codefactory.se>

	* NEWS: updated (oops, missed 0.5 release).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-03-25  Mikael Hallendal  <micke@codefactory.se>
 
+	* NEWS: updated (oops, missed 0.5 release).
+
 	* configure.in: bumped version to 0.5
 
 2002-03-24  Zbigniew Chyla  <cyba@gnome.pl>
