--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+Changes in 0.5:
+---------------
+
+* Support for INFOPATH                          (Me)
+* Faster in-doc browsing .                      (Me)
+* Fixed bugs: #72637, #72965, #75081            (Me)
+* UTF8 Fix                                      (Zbigniew Chyla)
+* Accessibility fixes                           (Padraig O'Briain,
+						 Jagadeesh B. G)
+
+Changes in 0.4:
+---------------
+
+* Session management                            (Sandeep V Honde)
+
 Changes in 0.3:
 ---------------
 
