--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-27  Jarkko Ranta  <jjranta@cc.joensuu.fi>
+
+	* fi.po: Added Finnish translation by Henri Mannerberg.
+
 2002-03-20  Christophe Merlet  <redfox@eikonex.org>
 
 	* fr.po: Added French translation from
