--- a/po/ms.po
+++ b/po/ms.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp\n"
-"POT-Creation-Date: 2002-03-01 12:29+0800\n"
+"POT-Creation-Date: 2002-04-04 00:22+0800\n"
 "PO-Revision-Date: 2002-02-04 03:03+0800\n"
 "Last-Translator: Hasbullah Bin Pit <sebol@ikhlas.com>\n"
 "Language-Team: Bahasa Melayu <gabai-penyumbang@lists.sourceforge.net>\n"
@@ -162,7 +162,7 @@ msgstr "/Fail/_Keluar"
 
 #: src/yelp-window.c:142
 msgid "/_Go"
-msgstr "/_PerGi"
+msgstr "/_Pergi"
 
 #: src/yelp-window.c:143
 msgid "/Go/_Back"
@@ -192,11 +192,13 @@ msgstr "/Bantuan/Perih_al"
 # bezakan browse web= layar, browse local = lungsur..
 #: src/yelp-window.c:207
 msgid "Help Browser"
-msgstr "Pelungsur Fail Bantuan"
+msgstr "Pelungsur Bantuan"
 
 #: src/yelp-window.c:529
 msgid "translator_credits"
-msgstr "Mohamad Afifi Omar + Hasbullah Pit"
+msgstr ""
+"Mohamad Afifi Omar <mr_mohd_afifi@yahoo.com>\n"
+"Hasbullah Bin Pit <sebol@ikhlas.com>, Merlimau."
 
 #: src/yelp-window.c:533
 msgid "Help Browser for GNOME 2.0"
