--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-04-03  Gustavo Maciel Dias Vieira <gdvieira@zaz.com.br>
+
+	* pt_BR.po: Added Brazilian Portuguese translation done by
+	Evandro Fernandes Giovanini <evandrofg@ig.com.br>.
+
 2002-03-29  Christophe Merlet  <redfox@eikonex.org>
 
 	* fr.po: Updated maintainer..
