--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-03  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
+
+	* configure.in (ALL_LINGUAS): Added pt_BR.
+
 2002-03-25  Mikael Hallendal  <micke@codefactory.se>
 
 	* NEWS: updated (oops, missed 0.5 release).
