--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-06  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Updated Danish translation.
+
 2002-04-05  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
