--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-04-10  Padraig O'Briain  <padraig.obriain@sun.com>
+
+	* src/yelp-scrollkeeper.c (ys_parse_index):
+	Fix small memory leak (#77733)
+
 2002-04-04  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-window.c: use GConf for the toolbar style.
