--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-04-10  Richard Hult  <rhult@codefactory.se>
+
+	* src/yelp-view-index.c (yelp_view_index_new): Add a bit of
+	padding around the search label.
+	Put the index list in a frame with IN shadow.
+
 2002-04-10  Padraig O'Briain  <padraig.obriain@sun.com>
 
 	* src/yelp-scrollkeeper.c (ys_parse_index):
