--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,7 @@
 2002-04-11  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* wa.po: Updated Walloon file
+	* lv.po: Completed header
 
 2002-04-10  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
 
