added ja to ALL_LINGUAS
2002-04-11  Mikael Hallendal  <micke@codefactory.se>

	* configure.in (GETTEXT_PACKAGE): added ja to ALL_LINGUAS

2002-04-11  Mikael Hallendal  <micke@codefactory.se>

	* ja.po: added Japanese translation from
	         Takeshi Aihana <aihana@gnome.gr.jp>

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-04-11  Mikael Hallendal  <micke@codefactory.se>
+
+	* ja.po: added Japanese translation from 
+	         Takeshi Aihana <aihana@gnome.gr.jp> 
+
 2002-04-11  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* wa.po: Updated Walloon file
