--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-04-11  Mikael Hallendal  <micke@codefactory.se>
 
+	* configure.in (GETTEXT_PACKAGE): added ja to ALL_LINGUAS
+
 	* src/yelp-view-toc.c:
 	- did some cleanups
 	- make output in first page look nicer.
