--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-11  Tõivo Leedjärv  <toivo@linux.ee>
+
+	* et.po: Updated Estonian translation.
+
 2002-04-11  Mikael Hallendal  <micke@codefactory.se>
 
 	* ja.po: added Japanese translation from 
