changed the string "Get Help on..." to "Help Contents" by suggestion from
2002-04-11  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c (yelp_view_toc_start): changed the string
	  "Get Help on..." to "Help Contents" by suggestion from Calum.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-04-11  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-view-toc.c (yelp_view_toc_start): changed the string
+	  "Get Help on..." to "Help Contents" by suggestion from Calum.
+
 	* configure.in (GETTEXT_PACKAGE): added ja to ALL_LINGUAS
 
 	* src/yelp-view-toc.c:
