--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-04-12  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-view-toc.c (TOC_BLOCK_SEPARATOR): fixed string, thanks
+	  menthos.
+
 2002-04-11  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-view-toc.c (yelp_view_toc_start): changed the string
