--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-12  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
+
+	* sk.po: Updated Slovak translation.
+
 2002-04-12  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
 	* nl.po: Updated Dutch translation.
