--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2002-04-14  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-db2html.c: 
+	- use GError to signal errors while parsing document. Still needs
+	  to be added to above layers. 
+	- don't leek the stylesheet name.
+
+	* src/yelp-error.[ch]: added.
+
 	* src/yelp-view-content.c: added includes to fix warnings.
 
 	* src/yelp-view-index.c: same.
