--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-14  Mikael Hallendal  <micke@codefactory.se>
+
+	* POTFILES.in: added src/yelp-db2html.c
+
 2002-04-14  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * pt.po: Updated Portuguese translation.
