--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-15  Hasbullah Bin Pit <sebol@ikhlas.com>
+
+	* ms.po: Updated Malay Translation.
+
 2002-04-15  Valek Filippov  <frob@df.ru>
 
 	* ru.po: updated russian translation from Dmitry Mastrukov.
