--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-04-15  Mikael Hallendal  <micke@codefactory.se>
 
+	* Release 0.6
+
+	* configure.in: bumped version to 0.6
+
 	* src/yelp-window.c: fixed a couple of warnings.
 	(yw_handle_url): send the error correctly to gnome_url_show,
 	  thanks rhult :)
