--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-04-15  Mikael Hallendal  <micke@codefactory.se>
 
+	* configure.in: bumped version to 0.6.99
+
 	* Release 0.6
 
 	* configure.in: bumped version to 0.6
