--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+Changes in 0.6:
+---------------
+
+* Made the TOC view look better                 (Me,
+						 Tammy Fox)
+* Better error handling when viewing docbook    (Me)
+* Docbook speedups                              (Me)
+* Chunking stylesheet fixes                     (Sander Vesik)
+* Fixed a couple of Calum's usability issues    (Me)
+* Use toolbar settings from GConf               (Me)
+* Style fixes in the index view                 (Richard Hult)
+* Fixed memory leaks                            (Padraig O'Briain
+						 Me)
+
 Changes in 0.5:
 ---------------
 
