--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-16  Abel Cheung  <maddog@linux.org.hk>
+
+	* configure.in: Added "zh_TW" to ALL_LINGUAS.
+
 2002-04-15  Mikael Hallendal  <micke@codefactory.se>
 
 	* configure.in: bumped version to 0.6.99
