--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2002-04-16  Abel Cheung  <maddog@linux.org.hk>
+
+	* .cvsignore: Added some file(s).
+	* zh_TW.po: New traditional Chinese translation from
+	Joe Man <trmetal@yahoo.com.hk>
+
 2002-04-15  Hasbullah Bin Pit <sebol@ikhlas.com>
 
 	* ms.po: Updated Malay Translation.
