--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-16  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Updated Danish translation.
+
 2002-04-16  Abel Cheung  <maddog@linux.org.hk>
 
 	* .cvsignore: Added some file(s).
