--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-18  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
+
+	* nl.po: Updated Dutch translation by Ronald Hummelink.
+
 2002-04-17  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
