--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-04-18  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Added Korean translation from Young-Ho Cha
+	<ganadist@chollian.net>.
+
 2002-04-18  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
 	* nl.po: Updated Dutch translation by Ronald Hummelink.
