--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-18  Changwoo Ryu  <cwryu@debian.org>
+
+	* configure.in (ALL_LINGUAS): Added ko (Korean).
+
 2002-04-18  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-html.c: 
