make "indirect" links work and make several beautification changes
2002-04-19  Sander Vesik <sander.vesik@sun.com>
        * stylesheets/yelp-customization.xsl: make "indirect" links work
          and make several beautification changes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-19  Sander Vesik <sander.vesik@sun.com>
+	* stylesheets/yelp-customization.xsl: make "indirect" links work
+	  and make several beautification changes
+
 2002-04-18  Sander Vesik <sander.vesik@sun.com>
 	* stylesheets/yelp-customization.xsl: include yelp-custom.xsl
 	  instead of gnome-custom.xsl, "fix" whitespace, collect link
