--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-22  Takeshi Aihana <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 2002-04-19  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
 	* nl.po: Updated Dutch translation by Ronald Hummelink.
@@ -61,7 +65,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2002-04-11  Tõivo Leedjärv  <toivo@linux.ee>
+2002-04-11  T-Aõivo Leedjärv  <toivo@linux.ee>$)B
 
 	* et.po: Updated Estonian translation.
 
@@ -122,7 +126,7 @@
 
 	* hu.po: Updated Hungarian translation
 
-2002-03-17  Tõivo Leedjärv <toivo@linux.ee>
+2002-03-17  T-Aõivo Leedjärv <toivo@linux.ee>$)B
 
 	* et.po: Updated Estonian translation.
 
@@ -142,10 +146,10 @@
 
 	* nl.po: Updated dutch translation (Tino Meinen)
 
-2002-03-06  Germán Poo-Caamaño <gpoo@ubiobio.cl>
+2002-03-06  Germ-Aán Poo-Caamaño <gpoo@ubiobio.cl>$)B
 
 	* es.po: Updated spanish translation from
-		Juan Manuel García Molina <juanma_gm@wanadoo.es>
+		Juan Manuel Garc-Aía Molina <juanma_gm@wanadoo.es>$)B
 
 2002-03-04  Christian Meyer  <chrisime@gnome.org>
 
@@ -167,7 +171,7 @@
 
 2002-03-03  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmål) translation.
+	* no.po: Updated Norwegian (bokm-Aål) translation.$)B
 	
 2002-03-03  Ole Laursen  <olau@hardworking.dk>
 
@@ -201,7 +205,7 @@
 
 	* de.po: Updated German translation.
 
-2002-03-01  Tõivo Leedjärv  <leedjarv@interest.ee>
+2002-03-01  T-Aõivo Leedjärv  <leedjarv@interest.ee>$)B
 
 	* et.po: Updated Estonian translation.
 
@@ -218,7 +222,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-28  Tõivo Leedjärv  <leedjarv@interest.ee>
+2002-02-28  T-Aõivo Leedjärv  <leedjarv@interest.ee>$)B
 
 	* et.po: Updated Estonian translation.
 
@@ -249,7 +253,7 @@
 
 2002-02-21  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Committed updated Turkish translation by Görkem.
+	* tr.po: Committed updated Turkish translation by G-Aörkem.$)B
 
 2002-02-20  Simos Xenitellis  <simos@hellug.gr>
 
@@ -264,7 +268,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-17  Tõivo Leedjärv  <leedjarv@interest.ee>
+2002-02-17  T-Aõivo Leedjärv  <leedjarv@interest.ee>$)B
 
 	* et.po: Added Estonian translation.
 
@@ -282,19 +286,19 @@
 
 2002-02-12  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmål) translation.
+	* no.po: Updated Norwegian (bokm-Aål) translation.$)B
 	
 2002-02-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmål) translation.
+	* no.po: Updated Norwegian (bokm-Aål) translation.$)B
 	
 2002-02-08  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * pt.po: Updated Portuguese translation.
 
-2002-02-04  Carlos Perelló Marín <carlos@gnome-db.org>
+2002-02-04  Carlos Perell-Aó Marín <carlos@gnome-db.org>$)B
 
-	* es.po: Updated by Juan Manuel García Molina <juanma_gm@wanadoo.es>
+	* es.po: Updated by Juan Manuel Garc-Aía Molina <juanma_gm@wanadoo.es>$)B
 
 2002-02-03  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
@@ -316,7 +320,7 @@
 
 2002-01-30  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmål) translation.
+	* no.po: Updated Norwegian (bokm-Aål) translation.$)B
 	
 2002-01-30  Zbigniew Chyla  <cyba@gnome.pl>
 
@@ -342,7 +346,7 @@
 
 2002-01-27  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmål) translation.
+	* no.po: Updated Norwegian (bokm-Aål) translation.$)B
 	
 2002-01-27  Christian Rose  <menthos@menthos.com>
 
@@ -379,7 +383,7 @@
     
 2002-01-11  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmål) translation.
+	* no.po: Updated Norwegian (bokm-Aål) translation.$)B
 	
 2002-01-10  Christian Rose  <menthos@menthos.com>
 
@@ -406,9 +410,9 @@
 
 2002-01-06  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Added Turkish translation by Görkem Cetin.
+	* tr.po: Added Turkish translation by G-Aörkem Cetin.$)B
 
-2002-01-06  Germán Poo-Caamaño <gpoo@ubiobio.cl>
+2002-01-06  Germ-Aán Poo-Caamaño <gpoo@ubiobio.cl>$)B
 
 	* es.po: Added spanish translation.
 
@@ -426,7 +430,7 @@
 
 2001-12-16  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmål) translation.
+	* no.po: Updated Norwegian (bokm-Aål) translation.$)B
 	
 2001-12-13  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
 
@@ -442,7 +446,7 @@
 
 2001-12-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Added Norwegian (bokmål) translation.
+	* no.po: Added Norwegian (bokm-Aål) translation.$)B
 	
 2001-12-10  Richard Hult  <rhult@codefactory.se>
 
@@ -481,7 +485,7 @@
 
 	* de.po: Added German translation.
 
-2001-12-04  Carlos Perelló Marín <carlos@gnome-db.org>
+2001-12-04  Carlos Perell-Aó Marín <carlos@gnome-db.org>$)B
 
 	* POTFILES.in: Removed missing files.
 
