- some more fixes.
2002-04-23  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-util.c (yelp_util_extract_docpath_from_uri):
	- some more fixes.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-04-23  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-util.c (yelp_util_extract_docpath_from_uri): 
+	- some more fixes.
+
 	* src/yelp-view-toc.c: added lots of \n to the outputed html,
 	  makes it easier to read it.
 
