remove unneeded special case.
Fri Apr  5 07:20:18 2002  Jonathan Blandford  <jrb@redhat.com>

	* src/yelp-info.c (yelp_info_read_info_dir): remove unneeded
	special case.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr  5 07:20:18 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* src/yelp-info.c (yelp_info_read_info_dir): remove unneeded
+	special case.
+
 2002-04-23  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-util.c (yelp_util_extract_docpath_from_uri): 
