--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-04-27 John Fleck <jfleck@inkstain.net>
+
+	* yelp-db2html.c
+	load/parse the DTD
+
 Fri Apr  5 07:20:18 2002  Jonathan Blandford  <jrb@redhat.com>
 
 	* src/yelp-info.c (yelp_info_read_info_dir): remove unneeded
