--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-28  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* configure.in: Added "vi" entry to ALL_LINGUAS.
+
 2002-04-27 John Fleck <jfleck@inkstain.net>
 
 	* yelp-db2html.c
