--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-04-28  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* vi.po: Added Vietnamese file
+	* wa.po: Updated Walloon file
+
 2002-04-26  Tõivo Leedjärv  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
