--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-28  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/Makefile.am (INCLUDES): removed -I$(includedir).
+
 2002-04-28  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* configure.in: Added "vi" entry to ALL_LINGUAS.
