--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-04-29  Mikael Hallendal  <micke@codefactory.se>
+
+	* configure.in: bumped version to 0.6.1
+
+	* NEWS: updated for 0.6.1
+
 2002-04-28  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/Makefile.am (INCLUDES): removed -I$(includedir).
@@ -9,12 +15,12 @@
 2002-04-27 John Fleck <jfleck@inkstain.net>
 
 	* yelp-db2html.c
-	load/parse the DTD
+	  load/parse the DTD
 
 Fri Apr  5 07:20:18 2002  Jonathan Blandford  <jrb@redhat.com>
 
 	* src/yelp-info.c (yelp_info_read_info_dir): remove unneeded
-	special case.
+	  special case.
 
 2002-04-23  Mikael Hallendal  <micke@codefactory.se>
 
