--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-04-29  Mikael Hallendal  <micke@codefactory.se>
 
+	* Release 0.6.1
+
 	* configure.in: bumped version to 0.6.1
 
 	* NEWS: updated for 0.6.1
