Updated French translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-29  Christophe Merlet  <christophe@merlet.net>
+
+	* fr.po: Updated French translation.
+
 2002-04-28  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* vi.po: Added Vietnamese file
@@ -114,7 +118,7 @@
 	* pt_BR.po: Added Brazilian Portuguese translation done by
 	Evandro Fernandes Giovanini <evandrofg@ig.com.br>.
 
-2002-03-29  Christophe Merlet  <redfox@eikonex.org>
+2002-03-29  Christophe Merlet  <christophe@merlet.net>
 
 	* fr.po: Updated maintainer..
 
@@ -122,7 +126,7 @@
 
 	* fi.po: Added Finnish translation by Henri Mannerberg.
 
-2002-03-20  Christophe Merlet  <redfox@eikonex.org>
+2002-03-20  Christophe Merlet  <christophe@merlet.net>
 
 	* fr.po: Added French translation from
 	Jean-Michel Ardantz <jmardantz@ifrance.com> .
