--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-29  Christophe Merlet  <christophe@merlet.net>
+
+	* src/Makefile.am: Added $(DESTDIR) variable.
+
 2002-04-29  Mikael Hallendal  <micke@codefactory.se>
 
 	* Release 0.6.1
