--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-30  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
+
+	* sk.po: Updated Slovak translation.
+
 2002-04-29  Christophe Merlet  <christophe@merlet.net>
 
 	* fr.po: Updated French translation.
